<resources>
    <string name="app_name">ProjectRenai</string>
    <string name="login">LOGIN</string>
    <string name="get_into_with_your_email_and_password">Get into with your Email and Password</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="complete_the_information">Complete the information</string>
    <string name="name">Name</string>
    <string name="et_surname">Surname</string>
    <string name="et_mobile">Mobile</string>
    <string name="et_password">Password</string>
    <string name="et_repeat_password">Repeat Password</string>
    <string name="go_to_login">Go to Login</string>
    <string name="error">ERROR</string>
    <string name="popup_image">Popup image</string>
    <string name="close_button">Close button</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="procedure_desc">If any user believes that any material deleted is not infringing, or the user has the right to post and use such material from the copyright owner, the copyright owner\’s agent, or in accordance with the law, the user must send a counter-notification, which includes the following The customer support agents listed provide the following information: The user\’s physical or electronic signature. Identify the material that has been removed and where the material appeared before it was removed. A statement that the user sincerely believes that the material was deleted due to an error or misidentification of the material. The client\'s name, address, phone number, and, if accessible, email address and an explanation that such individual or element agrees to the locale of the Europe Court for the legal area wherein the client\'s location is found, or if the client\'s location is situated external to Spain, for any legal region where in Company is found, and that such individual or substance will acknowledge administration of interaction from the individual who gave notice of the supposed encroachment.</string>
    <string name="trademark_desc">EGA Games is a brand built on its intellectual property with affiliates properties such as Degica or KADOKAWA . Therefore, we must take measures to protect our property. We allow you to share our materials, but we need you to understand that these materials belong to EGA Eroge. Therefore, if you share materials publicly (for example, on a website), you agree to include the legal provisions of the materials provided by EGA Eroge or KADOKAWA on each page at one time. Such legal actions will use the following format: "© KADOKAWA, DEGICA, EGA GAMES CO., LTD. All Rights Reserved. Project Renai is a registered trademark of EGA Games Co., Ltd. All material used under license.</string>
    <string name="conditions_desc">The materials may not be used for any sales or commercial purposes, which means that you cannot receive license fees or advertising revenue, except as part of a partner program operated by YouTube, Twitch, or similar programs. If the operator of the partner program seeks to confirm our policies, please point them to this page because we do not have the resources to respond to all requests. As an exception, for influencers who earn income or wages from corporate entities through game streaming, such restrictions will not be imposed on commercial use. Do not sell materials to third parties as original content. Do not use materials to promote other commercial products. Do not change, delete or hide any trademark or copyright notices that may be included in the material. Immediately comply with any requirements of EGA Games, and delete any materials at EGA Games\'s sole discretion. Do not use any material in conjunction with any of the following: unapproved EGA Eroge assets; counterfeit goods, pornographic content, unauthorized EGA Eroge and affiliates music that can be used for streaming or downloading, or that can be used for streaming or downloading Links to unauthorized EGA Games or KADOKAWA music. Do not use any material for any other purpose that is illegal or that might make EGA Eroge or KADOKAWA\'s name or material notorious. Do not merge or synchronize materials with third-party content (such as mashups), but you can include materials with third-party content (for example, before or after the same video), provided that you also obtain the original copyright owner. No video will contain racism, sexism, homophobia, defamation, or any type of general offensive content. This includes graphic violence or sexually aggressive explicit content. Only use the music included in Project Renai. Do not replace Project Renai music with third-party music when displaying gameplay.In case you want to use them for videos or streaming make sure they are without copyright or you have the rights of the corresponding author, we are not responsible for any incident related to this. Do not play the Project Renai music alone (that is, without game graphics) or play it together with third-party content.</string>
</resources>