<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.screen.RegisterActivity">
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/indigo_daisy"
        android:text="@string/register"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_the_information"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        android:fontFamily="@font/roboto_regular"
        android:textSize="10sp"/>

    <EditText
        android:id="@+id/etName"
        app:layout_constraintStart_toStartOf="@id/tvDesc"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:hint="@string/name"
        android:background="@drawable/et_rounded"
        android:padding="15dp"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etSurname"
        app:layout_constraintStart_toStartOf="@id/tvDesc"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/et_surname"
        android:background="@drawable/et_rounded"
        android:padding="15dp"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@id/tvDesc"
        app:layout_constraintTop_toBottomOf="@id/etSurname"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email_login"
        android:background="@drawable/et_rounded"
        android:padding="15dp"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etMobile"
        app:layout_constraintStart_toStartOf="@id/tvDesc"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/et_mobile"
        android:background="@drawable/et_rounded"
        android:padding="15dp"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@id/tvDesc"
        app:layout_constraintTop_toBottomOf="@id/etMobile"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/et_password"
        android:background="@drawable/et_rounded"
        android:padding="15dp"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etPasswordConfirm"
        app:layout_constraintStart_toStartOf="@id/tvDesc"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/et_repeat_password"
        android:background="@drawable/et_rounded"
        android:padding="15dp"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPasswordConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        tools:text="error"
        android:textSize="15dp"
        android:textColor="@color/red"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/register"
        android:gravity="center"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/clRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="15dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivLoginIcon"
            android:src="@drawable/ic_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clRegister"
            app:layout_constraintBottom_toTopOf="@id/btnRegisterFooter"
            app:tint="#989898"
            android:contentDescription="Icon which runs the same action that btnRegister" />

        <TextView
            android:id="@+id/btnRegisterFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLoginIcon"
            android:textColor="#989898"
            android:text="@string/go_to_login"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>