<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.screen.LoginActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg"
        android:foreground="@drawable/image_layout_white"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/times"
        android:text="@string/login"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_into_with_your_email_and_password"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        android:fontFamily="@font/roboto_regular"
        android:textSize="10sp"/>

    <EditText
        android:id="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@id/tvDesc"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_login"
        android:background="@drawable/et_rounded"
        android:padding="15dp"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/tvDesc"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password_login"
        android:background="@drawable/et_rounded"
        android:padding="15dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        tools:text="Error"
        android:textColor="@color/red"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/btn_rounded"
        android:backgroundTint="@color/black"
        android:text="@string/log_in"
        android:gravity="center"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/clRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="15dp"
        />

    <ProgressBar
        android:id="@+id/pbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btnLogin"
        app:layout_constraintBottom_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        android:visibility="invisible"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivRegisterIcon"
            android:src="@drawable/ic_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clRegister"
            app:layout_constraintBottom_toTopOf="@id/btnRegister"
            app:tint="#989898"
            android:contentDescription="Icon which runs the same action that btnRegister" />

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivRegisterIcon"
            android:textColor="#989898"
            android:text="Register here"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>